--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -312,7 +312,7 @@ html {
 html {
   font-size: 14px;
   -ms-overflow-style: scrollbar;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
@@ -5601,7 +5601,7 @@ button.close {
   margin: 1px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   border: 1px solid #fff;
   border-radius: 10px;
 }
@@ -12711,7 +12711,7 @@ button:focus {
 }
 
 .btn-labeled.btn-link .btn-label {
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   padding: 0.25rem 0;
 }
 
@@ -15922,6 +15922,12 @@ body.menu-is-visible {
   padding-left: .5rem;
 }
 
+.cmp-order-item .item-bundle {
+  width: 300px;
+  font-weight: 700;
+  font-size: 80%;
+}
+
 .cmp-order-item .item-name {
   display: -webkit-box;
   text-overflow: ellipsis;
@@ -16918,7 +16924,7 @@ body.menu-is-visible {
   bottom: -2px;
   left: -1px;
   background-color: #fff;
-  box-shadow: 0 0 0 0 transparent;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   border: 1px solid transparent;
   transform-origin: top right;
   transform: scaleX(1) scaleY(1);
@@ -19315,8 +19321,16 @@ body.menu-is-visible {
   background-color: #f0ad4e;
 }
 
-.availability_5 {
+.availability_5,
+.availability_6,
+.availability_7,
+.availability_8 {
   background-color: #d9534f;
+}
+
+.availability_9,
+.availability_10 {
+  background-color: #4D4F4D;
 }
 
 .rating .tag {
@@ -19704,7 +19718,7 @@ body.menu-is-visible {
 .gradient-hr {
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, transparent, #DCDBD7, transparent);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #DCDBD7, rgba(0, 0, 0, 0));
 }
 
 .show-more-returns {
