UPDATE item list 2/3 to match 1

--- a/resources/views/Containers/ItemLists/ItemList2.twig
+++ b/resources/views/Containers/ItemLists/ItemList2.twig
@@ -11,17 +11,30 @@
 	{% set itemList = services.itemLoader.loadForTemplate('Ceres::ItemList.ItemListView', itemLoaderPresets.tagList, {'tagIds': tagIds}).documents %}
 {% endif %}
 
-{% if not isHome and (itemList is not empty or listType == "last_seen") %}
-    <hr>
-{% endif %}
-
-{% include 'Ceres::Containers.Partials.ItemLists.ItemListHeader.twig' with { itemListId: 2, listType: listType, isHome: isHome } %}
-
 {% if listType == "last_seen" %}
     <div class="row">
-        <last-seen-item-list></last-seen-item-list>
+        {% set variationId = 0 %}
+        {% if item and item.documents is not empty %}
+            {% set variationId = item.documents[0].data.variation.id %}
+        {% endif %}
+        
+        <last-seen-item-list :variation-id="{{ variationId }}">
+            <div slot="heading">
+                {% if not isHome %}
+                    <hr>
+                {% endif %}
+
+                {% include 'Ceres::Containers.Partials.ItemLists.ItemListHeader.twig' with { itemListId: 2, listType: listType, isHome: isHome } %} 
+            </div>
+        </last-seen-item-list>
     </div>
 {% elseif itemList is not empty %}
+    {% if not isHome %}
+        <hr>
+    {% endif %}
+
+    {% include 'Ceres::Containers.Partials.ItemLists.ItemListHeader.twig' with { itemListId: 2, listType: listType, isHome: isHome } %} 
+
     <div class="row">
         <container-item-list :items="{{ itemList | json_encode }}"></container-item-list>
     </div>
