--- a/resources/views/Containers/Components/LastSeenItemList.twig
+++ b/resources/views/Containers/Components/LastSeenItemList.twig
@@ -1,7 +1,7 @@
 <script type="x/template" id="vue-last-seen-item-list">
     <div v-if="items.length">
         <slot name="heading"></slot>
-        <div class="row">
+        <div class="row clearfix">
             <container-item-list :items="items"></container-item-list>
         </div>
     </div>
