--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -77,8 +77,12 @@
 {% set performanceLevel = config('Ceres.log.performance.level') %}
 {% set itemName = config('Ceres.item.name') %}
 
+{% if LayoutContainer.show("Ceres::Template.StyleOverwrite") | trim is empty %}
+    <link data-sass-root="{{ plugin_path('Ceres') }}" data-sass-original="{{ plugin_path('Ceres') }}/css/ceres.scss" rel="stylesheet" href="{{ plugin_path('Ceres') }}/css/ceres.css">
+{% endif %}
 
-<link rel="stylesheet" href="https://www.darkages.de/plentydev/krazy8/css/ceres.css">
+{{ LayoutContainer.show("Ceres::Template.StyleOverwrite") }}
+<!-- <link rel="stylesheet" href="https://www.darkages.de/plentydev/krazy8/css/ceres.css"> -->
 
 <!-- Extend the existing style with a template -->
 {# {{ LayoutContainer.show("Ceres::Template.Style") }} #}
