--- a/resources/scss/ceres/views/PageDesign/_header.scss
+++ b/resources/scss/ceres/views/PageDesign/_header.scss
@@ -24,10 +24,6 @@
 			justify-content: space-between;
 			align-items: center;
 		}
-
-		.search-input {
-			width: 270px;
-		}
 	}
 
 	@include media-breakpoint-down(sm) {
@@ -35,27 +31,34 @@
 			display: flex;
 			flex-direction: column-reverse;
 		}
-
-		.search-input {
-			width: 90%;
-		}
 	}
 
 	.search {
-		margin: 5px 0;
+		margin: 5px 5px;
 		background-color: $white;
+		flex: 1;
 		
-		.search-input {
-			border: none;
-			outline: none;
-			padding: 5px;	
-			height: 30px;
-		}
+		.search-box-shadow-frame {
 
-		.search-submit {
-			color: $brand-primary;
-			border: none;
-			height: 30px;
+			display: flex;
+			flex: 100;
+
+			.search-input {
+				border: none;
+				outline: none;
+				padding: 0.4rem 1rem;
+				font-size: 1.3rem;
+				line-height: 1;
+				flex: 1 70%;
+			}
+	
+			.search-submit {
+				color: $brand-primary;
+				border: none;
+				font-size: 1.3rem;
+				line-height: 1;
+				padding: 0.4rem 1rem;
+			}
 		}
 	}
 
@@ -93,7 +96,7 @@
 
 			@include media-breakpoint-up(md) {
 				a:not(.btn) {
-					padding: 0.5rem .8rem;
+					padding: 1rem .8rem;
 					display: inline-block;
 					color: $gray-lighter;
 
