CHANGE ItemSearch - complete reimplementation of item search with an autocomplete based on vue.js

--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -117,7 +117,7 @@
 <div class="container-max page-header">
     <div class="row">
         <div id="searchBox" class="cmp cmp-search-box collapse {% if services.template.isSearch() %} in {% endif %}">
-            <item-search template="#vue-item-search"></item-search>
+            <item-search></item-search>
         </div>
 
         {% if enableCurrencySelect == "true" %}
