--- a/resources/views/ItemList/Components/ItemSearch.twig
+++ b/resources/views/ItemList/Components/ItemSearch.twig
@@ -12,7 +12,7 @@
 
             <div class="autocomplete-suggestions" v-if="isSearchFocused && autocompleteResult.length">
                 <div class="autocomplete-suggestion" v-for="(item, index) in autocompleteResult" :key="index" @click="selectAutocompleteItem(item)" :class="{ 'autocomplete-selected': selectedAutocompleteIndex === index }">
-                    <div class="autocomplete-image-container">
+                    <div class="autocomplete-image-container" v-if="showItemImages">
                         <img class="autocomplete-image" :src="item.img">
                     </div>
                     <div class="autocomplete-item-name" v-html="item.displayName"></div>
