--- a/resources/scss/ceres/views/Templates/BasketItemList/_basket-list-item.scss
+++ b/resources/scss/ceres/views/Templates/BasketItemList/_basket-list-item.scss
@@ -154,6 +154,10 @@
 				overflow: hidden;
 				white-space: nowrap;
 				display: block;
+
+				& @at-root ul {
+					
+				}
 			}
 
 			@at-root .basket-small ul {
