--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -14972,7 +14972,8 @@ Custom classes
   position: absolute;
   box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
   background: #ffffff;
-  overflow: auto;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   z-index: 1070;
   max-height: 310px;
   width: 100%;
