--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -12692,7 +12692,74 @@ $border-width: 1px;
 		color: $top-bar-color;
 		outline: none;
 	}
-	.controls-list{
+
+	.search-shown {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		@include media-breakpoint-up(md) {
+			-webkit-box-pack: justify;
+			    -ms-flex-pack: justify;
+			        justify-content: space-between;
+			-webkit-box-align: center;
+			    -ms-flex-align: center;
+			        align-items: center;
+		}
+		@include media-breakpoint-down(sm) {
+			-webkit-box-orient: vertical;
+			-webkit-box-direction: reverse;
+			    -ms-flex-direction: column-reverse;
+			        flex-direction: column-reverse;
+		}
+
+		.always-visible-search {
+			margin: 5px 5px;
+			background-color: $white;
+			-webkit-box-flex: 1;
+			    -ms-flex: 1;
+			        flex: 1;
+			
+			.search-box-shadow-frame {
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-flex: 100;
+				    -ms-flex: 100;
+				        flex: 100;
+	
+				.search-input {
+					border: none;
+					outline: none;
+					padding: 0.4rem 1rem;
+					font-size: 1.3rem;
+					line-height: 1;
+					-webkit-box-flex: 1;
+					    -ms-flex: 1 70%;
+					        flex: 1 70%;
+				}
+		
+				.search-submit {
+					color: $brand-primary;
+					border: none;
+					font-size: 1.3rem;
+					line-height: 1;
+					padding: 0.4rem 1rem;
+				}
+			}
+		}
+
+		.controls-list {
+			&>li {
+				@include media-breakpoint-up(md) {
+					a:not(.btn) {
+						padding: 1rem .8rem;
+					}
+				}
+			}
+		}
+	}
+
+	.controls-list {
 		margin-bottom: 0;
 		font-size: 0;
 		width: 100%;
@@ -12708,7 +12775,7 @@ $border-width: 1px;
 
 			// sets the height of the top-bar
 			@include media-breakpoint-down(md) {
-
+				
 				a:not(.btn) {
 					padding: 0.5rem .5rem;
 					display: inline-block;
@@ -12728,7 +12795,7 @@ $border-width: 1px;
 
 			@include media-breakpoint-up(md) {
 				a:not(.btn) {
-					padding: 0.5rem .8rem;
+					padding: .5rem .8rem;
 					display: inline-block;
 					color: $gray-lighter;
 
@@ -13206,7 +13273,7 @@ $border-width: 1px;
         max-width: 1200px;
         margin: 0 auto;
     }
-    .search-box-shadow-frame {
+     @at-root .search-box-shadow-frame {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -13249,6 +13316,7 @@ $border-width: 1px;
                 & > .autocomplete-item-name {
                     -ms-flex-item-align: center;
                         align-self: center;
+                    color: $gray-dark;
                 }
 
                 & > .autocomplete-image-container {
@@ -15111,10 +15179,6 @@ nav.navbar.megamenu {
 				overflow: hidden;
 				white-space: nowrap;
 				display: block;
-
-				& @at-root ul {
-					
-				}
 			}
 
 			@at-root .basket-small ul {
