--- a/resources/scss/ceres/views/PageDesign/_search-box.scss
+++ b/resources/scss/ceres/views/PageDesign/_search-box.scss
@@ -15,7 +15,7 @@
         max-width: 1200px;
         margin: 0 auto;
     }
-    .search-box-shadow-frame {
+     @at-root .search-box-shadow-frame {
         display: flex;
         flex: 100;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
@@ -49,6 +49,7 @@
 
                 & > .autocomplete-item-name {
                     align-self: center;
+                    color: $gray-dark;
                 }
 
                 & > .autocomplete-image-container {
