--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -72,6 +72,7 @@
 {% set defaultSorting = config('Ceres.sort.defaultSorting') %}
 {% set defaultSortingSearch = config('Ceres.sort.defaultSortingSearch') %}
 {% set rowsPerPage = config('Ceres.pagination.rowsPerPage') | split(', ') %}
+{% set noindex = config('Ceres.pagination.noindex') %}
 {% set columnsPerPage = config('Ceres.pagination.columnsPerPage') %}
 {% set itemsPerPage = rowsPerPage[0] * columnsPerPage %}
 {% set performanceLevel = config('Ceres.log.performance.level') %}
